pamc/src/tests/sample_code/should_fail/empty_parens/empty_match_case_params.ph
type U {
    .T: U,
}

let foo = match U.T {
    .T() => U.T,
};
